src/objects/Brand_Account__c.object
<CustomObject>
    <description>junction between brand and account</description>
    <fields>
        <fullName>Accounts__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Brand_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Brand_Account__c</fullName>
        <formula>Brand__r.Name  &amp;&quot; / &quot;&amp;   Accounts__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand/Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipName>Brand_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>CampaignsStatus__c</fullName>
        <formula>IF(!ISBLANK(LastContractEndDate__c),
 IF(LastContractEndDate__c &gt;= TODAY(), IMAGE(&quot;/servlet/servlet.FileDownload?file=0150B000006CGrL&quot;,&quot;Running&quot;,15,36),
    IF(LastContractEndDate__c &lt; DATE(IF(MONTH(TODAY())&lt;=3,YEAR(TODAY())-1,YEAR(TODAY())),
                                        IF(MONTH(TODAY())&lt;=3,MONTH(TODAY())+9,MONTH(TODAY())-3),
                                        IF(DAY(TODAY())&gt;28,28,DAY(TODAY()))), 
       IMAGE(&quot;/servlet/servlet.FileDownload?file=0150B000006CGra&quot;,&quot;Paused&quot;,15,36),
       IMAGE(&quot;/servlet/servlet.FileDownload?file=0150B000006CGrV&quot;,&quot;Attention&quot;,15,36)
)
),
&quot;N/A&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green = Campaigns running or planned
Amber = Campaigns paused for up to 3 months
Red = Campaigns paused for over 3 months</inlineHelpText>
        <label>Campaigns Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientSince__c</fullName>
        <inlineHelpText>Start Date of customer&apos;s first campaign</inlineHelpText>
        <label>Client Since</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractsClientSpend__c</fullName>
        <label>Contracts Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CurrentUser__c</fullName>
        <formula>$User.Id = DefaultClientServicesRep__c ||
$User.Id = SalesRep__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultClientServicesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Services Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Client_Services_Rep__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Id</field>
                <operation>notEqual</operation>
                <value>0050B000007HWqd,005U0000003nBsV</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Brand_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastContractEndDate__c</fullName>
        <label>Last Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastContractStartDate__c</fullName>
        <label>Last Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastReachOutDate__c</fullName>
        <label>Last Reach Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastYearsComparableClientSpend__c</fullName>
        <label>Last Year&apos;s Comparable Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Business__c</fullName>
        <formula>TEXT(Year(X1st_Opportunity_Close_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoOfContracts__c</fullName>
        <label>No of Contracts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenOpportunities__c</fullName>
        <label>Open Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PausedReason__c</fullName>
        <label>Paused Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Went to a competitor</fullName>
                </value>
                <value>
                    <fullName>Went to Google</fullName>
                </value>
                <value>
                    <fullName>Buying the campaign in house</fullName>
                </value>
                <value>
                    <fullName>Agency lost the business</fullName>
                </value>
                <value>
                    <fullName>Dark on YouTube (or social)</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Sales</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>BrandAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>X1st_Opportunity_Close_Date__c</fullName>
        <label>1st Opportunity Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Opportunity_Open_Date__c</fullName>
        <label>1st Opportunity Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X2013_Client_Spend__c</fullName>
        <label>2013 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2013_Gross_Profit__c</fullName>
        <label>2013 Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Client_Spend__c</fullName>
        <label>2014 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2014_Gross_Profit__c</fullName>
        <label>2014 Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Client_Spend__c</fullName>
        <label>2015 Client Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2015_Gross_Profit__c</fullName>
        <label>2015 Gross Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Contact_Id__c</fullName>
        <label>Xero Contact Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Contact__c</fullName>
        <formula>if(!isblank(Xero_Contact_Id__c),hyperlink(&quot;https://go.xero.com/Contacts/View/&quot;&amp;Xero_Contact_Id__c,&quot;View&quot;),&quot;Not Available&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>In case you encounter error after clicking on the link log into Xero and switch the Xero instance</inlineHelpText>
        <label>Xero Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Xero_Settings__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Settings</label>
        <referenceTo>XeroSettings__c</referenceTo>
        <relationshipName>Associated_Brands_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Brand/Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>SalesRep__c</columns>
        <columns>DefaultClientServicesRep__c</columns>
        <columns>CampaignsStatus__c</columns>
        <columns>PausedReason__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Attention_Required_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Attention</value>
        </filters>
        <label>All Attention Required Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Live_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Running</value>
        </filters>
        <label>All Live Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Paused_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>PausedReason__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Paused</value>
        </filters>
        <label>All Paused Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Attention_Required_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Attention</value>
        </filters>
        <label>My Attention Required Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>CampaignsStatus__c</columns>
        <columns>PausedReason__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Live_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Running</value>
        </filters>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Live Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>My_Paused_Brand_Accounts</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ContractsClientSpend__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>PausedReason__c</columns>
        <columns>LastReachOutDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CurrentUser__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CampaignsStatus__c</field>
            <operation>contains</operation>
            <value>Paused</value>
        </filters>
        <label>My Paused Brand/Accounts</label>
    </listViews>
    <listViews>
        <fullName>Unassigned</fullName>
        <columns>NAME</columns>
        <columns>OpenOpportunities__c</columns>
        <columns>NoOfContracts__c</columns>
        <columns>ClientSince__c</columns>
        <columns>LastContractEndDate__c</columns>
        <columns>DefaultClientServicesRep__c</columns>
        <columns>SalesRep__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DefaultClientServicesRep__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>SalesRep__c</field>
            <operation>equals</operation>
        </filters>
        <label>Unassigned</label>
    </listViews>
    <nameField>
        <label>Brand/Account</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brand/Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>